--- a/.vscode/.vscode/launch.json
+++ b/.vscode/.vscode/launch.json
@@ -7,9 +7,9 @@
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Angular Test",
-            "url": "http://localhost:4200/",
-            "webRoot": "${workspaceRoot}"
+            "name": "Launch Chrome against localhost",
+            "url": "http://localhost:8080",
+            "webRoot": "${workspaceFolder}"
         }
     ]
 }
